# aipriceaction

./: .dockerignore  .env.example  .gitignore  AGENTIC_TRADING_SOCIAL.md  AGENTS.md  CLAUDE.md  CRYPTO_DATA_BREAKDOWN.md  Cargo.toml  DATABASE.md  DATA_FLOW.md  Dockerfile  FEATURES.md  FUNDAMENTAL.md  FUNDAMENTALS.md  HOURLY_SYNC.md  MARKET_DATA_BREAKDOWN.md  MINUTE_SYNC.md  MULTI_AGENTS_ANALYSIS.md  PERFORMANCE.md  PERFORMERS.md  PLAN.md  PLAN_SQLITE.md  README.md  README.vn.md  REPORT.md  REPORT_week.md  RRG.md  SKILLS.md  SKILLS.vn.md  SUPER_STOCKS_REPORT.md  SUPER_STOCKS_RESULTS.csv  SYNC_SUMMARY.md  VOLUME_PROFILE.md  archive_crypto_data.sh  archive_market_data.sh  archive_spot_data.sh  crypto_data.db-shm  crypto_data.db-wal  crypto_top_100.json  debug_cache_key.md  (+10 more)
aipriceaction/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  REDIS.md  S3_ARCHIVE_WORKER.md  VCI.md  binance_tickers.json  company_info.json  docker-compose.prod.yml  docker-compose.yml  global_tickers.json  haproxy.cfg  sjc_tickers.json  test-udf.md  ticker_group.json  vn.csv
aipriceaction-terminal/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
aipriceaction-terminal/src/aipriceaction_terminal/: __init__.py  actions.py  analyze.py  app.py  bindings.py  chart.py  chat.py  cli.py  cli_commands.py  cli_setup.py  deep_research.py  predefined_watchlists.py  session.py  settings_tab.py  theme.py  ticker_data.py  user_settings.py  user_watchlist.py  utils.py  verbose.py  workflows.py
aipriceaction-terminal/tests/: conftest.py  openrouter_responses.py  test_app.py  test_chat.py  test_integration.py  test_settings_api.py  test_thinking.py  test_tool_call_streaming.py  test_tools.py  test_utils.py  test_workflows.py
aipriceaction/.sqlx/: query-17201cff7debff5bc8d76e00220151a643db6637c857029f2640c635a5875c81.json  query-1c603c7587b8701d8cc32c177c53cc746932fb483ea73db94bbfd20542537cb2.json  query-1f0ef3c1b38db0135fa77dbe41b8783f3eb4a84b95b2e9f229865f75815da4b5.json  query-20ba185d66943eaf5818a0788f314acaec7c104bb8ee2691a3abb4b013acad28.json  query-292b036705ca81f46ede24e3e55c0e398b2b8c52586faff6fb8a6776faf2db08.json  query-359c4d35e30c6deaee56d2e199699729ee6ea6a11731d0a2736f0275fa0f56b2.json  query-3aa0a828dbef87c9f83841687073c259dff8b0e0f33bbec07e6a3de5f88c5241.json  query-3e01610a37869a15271687d6e7917c2b9992178f7b7ee12f92f86e113678a33f.json  query-447ebdd3222aff7fb61517dd39b05f4beaae9cb97c8677e3662a1a7a30e35239.json  query-4a8317f97beb3be8c6a4c1d01c5f73f3d08f778d2fbc73331e601fa3855aff03.json  query-4c3e4415236e9f332557ac176306bbf5627de49254c46d088d81bec0ebb61121.json  query-4cdd1774a391b360d4e28268e6d355012eae7a60403b0b6b2f25b1ce73d4d0fe.json  query-4ed485e87332f6c367c16d8915d63e094fe505f47a65ba60432af2c93c26a9b5.json  query-4f741ff49b60076e0fb1f0896550abefbad61d212512159a6ff140a9c738e44c.json  query-5ea4fef0f6fb2ab62bfc5b5cf9f4d8a42d58d8835024fd20483c21e793fbf6da.json  query-5fcbbeb01124717eaf106180ce3cf2e19cecc0c31f69fd0ab6e24f665471debd.json  query-67b4e89e4f3a78287efc4d32eef9c75588251526f49ae9c4be9a1255a79ff3e9.json  query-692abff158cd3cbc62d063e17ca6f03a53db4bc08da9738d674d34215c067359.json  query-70cbf9413bc2521f387b549a26d6aaecb151b83799ba4d4d384c4d87bb756bf7.json  query-7522dd1572fc15a79751af636b5488bbb3d861841bf29e514591dbee70de1ae6.json  query-76a70f8344e5406c85cddcbe342a55c54948e23495339fece9c2a2d30f8a45e5.json  query-7945df55051f4ab97693470fed7c43edb6ca1bb829d518ed119eb15f61dc8ea0.json  query-7c79c850cc769d855319248a8ccd9b9e2451dfc7c5539bd1bdf0ee8505dbde23.json  query-7ef51e095832f62417b92f3492060b340ce7a0514f345ed4c599480fd6f50964.json  query-803359473cb02ce40911c86a1262b2b27fb25f41cb40a8db5055e5943eaf437c.json  query-88fb4282178573e92856575eac265169e3209475f9dc8f3644b10ccae2909ce8.json  query-8a627d852a206488c238efd6d69d8a875332983aa23b0df3cea129b1fa38f1bd.json  query-8ce4552a89159f702fd632d428f3831beca2eaefb51a91a37feea565eeff8167.json  query-90abc49eae49b91e2417cdf39f980e0e94ab3a6b12ec14e2b99cea378eadeff0.json  query-93e0a795da918dd90b43c1e170cc9974821960a73520346059956e32858d462e.json  query-99495b86ebc5752754365646cfa2cef0863cae80b7df013c271019395963cdaf.json  query-9b12a6571d8cd552a04b75fe63617cd39a7a6ccaa8f04a3e360c03de3760bebf.json  query-9b2ada24edd5bdd2904e627704974b679cea567d6c47ae29dc87bc303f0c8d54.json  query-a446cbfa0eda88e33a48b74e6560dcb99d050d0f5a8f3a15aae6f9f1f822d7f4.json  query-a55055fb9dac6f083c317356a0f8246155fb819f431bd0a6ffbbef02a5400a5e.json  query-a7ac3b3096f6b8566c267e9d31442a34e0d7611f1e70c812ead1b22749bf8c4e.json  query-aa5abcaa75f78c8372f1459950a4e8609f3e631130192a7185f0fae8b8de6f9c.json  query-c1910b1cb0207a6fcf81fb2260ca4645e80f23a02f6e60e2d1d48b8cb1180ff3.json  query-c2b51c0e053002565f8a966fefed38a766c1321a03a7d16800fc0acc1b0cf690.json  query-c7102b5741ca38879813530bae784d92b101b0c5a6da0c4acbd42d1cab139bb5.json  (+16 more)
aipriceaction/migrations/: 20260328070524_add_ohlcv.sql  20260328093000_add_yearly_subpartitions.sql  20260328103114_add_ticker_source_index.sql  20260328194215_add_priority_schedule.sql  20260329065500_drop_ticker_status_default.sql  20260405193314_fix_ready_next_indexes.sql  20260406055455_dedup_daily_ohlcv.sql  20260419120000_add_sync_kv.sql
aipriceaction/public/: index.html
aipriceaction/public/js/: README.md  health.js  refresh.js  rrg.js  sector-analysis.js  ticker-explorer.js  utils.js  volume-profile.js
aipriceaction/scripts/: backup-db.sh  restore-db.sh  run-all.sh  test-aggregated.mjs  test-analysis.mjs  test-api.mjs  test-cache.mjs  test-perf.mjs  test-redis-read.mjs  test-rrg.mjs  test-sync.mjs  test-upload.mjs  traces-generate.mjs  traces-query.mjs
aipriceaction/scripts/helpers/: README.md  cafef-ring-ohlcv.csv  cafef-ring.csv  cafef-sjc-ohlcv.csv  cafef-sjc.csv  check-server.sh  fetch-gold-prices.sh  gold-price.py  pricedancing-token.py  sjc-batch.csv  sjc-today.csv
aipriceaction/src/: cli.rs  constants.rs  db.rs  generate_company_info.rs  main.rs  redis.rs  test_proxy.rs  test_redis.rs  tracing_otel.rs
company_data/: AAA.json  (+839 more)
sdk/aipriceaction-python/: CHANGELOG.md  README.md  main.py  pyproject.toml
(+6420 files in other folders)
