[package]
name = "aipriceaction"
version = "0.1.42"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "compression-gzip", "compression-deflate", "compression-br", "timeout", "limit"] }
tower_governor = "0.8"
fs2 = "0.4"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.13"
