[project]
name = "aipriceaction-terminal"
version = "0.1.0"
description = "Terminal TUI for AI-powered ticker analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aipriceaction",
    "textual>=3.0.0",
    "textual-autocomplete>=4.0.6",
    "langchain-core",
    "langchain-openai",
    "langgraph",
]

[project.scripts]
aipriceaction-terminal = "aipriceaction_terminal.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aipriceaction_terminal"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
aipriceaction = { workspace = true }
