[package]
name = "aipriceaction"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "json", "uuid", "macros"
] }
csv = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["query"] }
tower-http = { version = "0.6.2", features = ["cors", "compression-gzip", "compression-deflate", "compression-br", "timeout", "fs", "limit"] }
uuid = { version = "1", features = ["v4", "serde"] }
infer = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls", "socks"] }
isahc = { version = "1.7", features = ["json"] }
rand = "0.8"
zip = "8"
yahoo_finance_api = "4.1"
fred = { version = "10", features = ["i-sorted-sets", "i-keys", "i-hashes", "enable-rustls"], default-features = false }
