[project]
name = "aipriceaction"
version = "0.1.0"
description = "Python SDK for AIPriceAction financial data from S3"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aipriceaction"]

[tool.pytest.ini_options]
testpaths = ["tests"]
