[project]
name = "aipriceaction"
dynamic = ["version"]
description = "Multi-market OHLCV data SDK with AI context builder and LLM integration for Vietnamese stocks, US stocks, crypto, and commodities"
authors = [
    {name = "Quan Hua", email = "quanhua92@gmail.com"},
]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "numpy>=2.4.4",
    "pandas>=2.0",
    "pydantic-settings>=2.14.0",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/aipriceaction/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aipriceaction"]

[tool.hatch.build.targets.sdist]
include = ["src/aipriceaction", "tests", "examples", "pyproject.toml", "README.md", "LICENSE"]


[tool.pytest.ini_options]
testpaths = ["tests"]

